fix font size on small device

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,7 +6,7 @@
       <app-text-with-wave text="Qui" />
       sommes-nous ?
     </h1>
-    <p class="sm:mt-16 mt-10 text-xl">
+    <p class="sm:mt-16 mt-10 sm:text-xl">
       L'association des Éclaireuses et des Éclaireurs de la Nature est un
       <b>mouvement scout</b> membre de la
       <a
@@ -51,7 +51,7 @@
       <app-text-with-wave text="Ins" />crire
       votre enfant
     </h2>
-    <p class="sm:mt-16 mt-10 text-xl before:content-['\201C'] before:absolute before:left-0 before:top-0 before:w-1 before:h-full before:bg-green-900">Rejoindre un groupe local des Éclaireuses et Éclaireurs de la Nature, c’est une expérience enrichissante, ludique et formatrice, au service d’un monde plus solidaire et respectueux de la nature.</p>
+    <p class="sm:mt-16 mt-10 sm:text-xl before:content-['\201C'] before:absolute before:left-0 before:top-0 before:w-1 before:h-full before:bg-green-900">Rejoindre un groupe local des Éclaireuses et Éclaireurs de la Nature, c’est une expérience enrichissante, ludique et formatrice, au service d’un monde plus solidaire et respectueux de la nature.</p>
     <img src="/images/jamboree.webp" alt="Jamboree EDLN Caen" class="w-full h-auto object-cover mb-6 rounded-lg bg-white mt-16 aspect-auto">
     <a
       href="https://edln.org/decouvrir-les-eclaireuses-et-eclaireurs-de-la-nature/"
