--- a/src/app/card/card.html
+++ b/src/app/card/card.html
@@ -8,7 +8,7 @@
   >
     <img
       [src]="image()"
-      [alt]="'image du groupe des ' + name()"
+      [alt]="'Groupe ' + name() + ' - Scouts EDLN Caen Éclaireurs de la Nature Normandie'"
       class="w-full h-auto object-cover mb-6 rounded-lg aspect-square bg-white"
     />
     <p class="text-white font-novo text-2xl">{{ name() }}</p>
