--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -4,10 +4,14 @@
   [style.pointer-events]="opacity === 0 ? 'none' : 'auto'"
 >
   <div class="container mx-auto px-4 relative flex items-center">
-    <a href="https://edln.org/">
+    <a
+      href="https://edln.org/"
+      title="Site officiel des Éclaireuses et Éclaireurs de la Nature"
+      rel="noopener noreferrer"
+    >
       <img
         src="/images/logo-edln.svg"
-        alt="Logo EDLN Caen"
+        alt="Logo Éclaireuses Éclaireurs de la Nature Caen - Scouts Caen"
         class="h-10 sm:h-16"
       />
     </a>
@@ -21,7 +25,7 @@
 <section class="sm:mb-16 mb-10">
   <img
     src="/images/Hero-edln.webp"
-    alt="Hero EDLN Caen"
+    alt="Scouts EDLN Caen - Éclaireurs de la Nature en Normandie"
     class="w-full h-auto"
   />
 </section>
