Update image assets and adjust HTML attributes for improved layout and performance

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -107,8 +107,8 @@
       ngSrc="/images/jamboree.webp"
       alt="Jamboree scouts EDLN Caen - Éclaireurs de la Nature en Normandie"
       width="1920"
-      height="1080"
-      class="w-full h-auto object-cover mb-6 rounded-lg bg-white mt-16 aspect-auto"
+      height="1275"
+      class="w-full h-auto mb-6 rounded-lg bg-white mt-16"
     />
     <p class="sm:mt-16 mt-10 sm:text-xl">
       Si vous souhaitez inscrire votre enfant, contactez-nous en cliquant sur le
@@ -149,7 +149,8 @@
       alt="Weekend campé sous tente - Scouts EDLN Caen Normandie"
       width="1920"
       height="1080"
-      class="w-full h-auto object-cover mb-6 rounded-lg bg-white mt-16 aspect-auto"
+      priority
+      class="w-full h-auto mb-6 rounded-lg bg-white mt-16"
     />
   </section>
 
@@ -174,7 +175,8 @@
       alt="Activités de pleine nature - Scouts EDLN Caen en Normandie"
       width="1920"
       height="1080"
-      class="w-full h-auto object-cover mb-6 rounded-lg bg-white mt-16 aspect-auto"
+      class="w-full h-auto mb-6 rounded-lg bg-white mt-16"
+      priority
     />
   </section>
 
@@ -210,7 +212,7 @@
       alt="Scouts EDLN Caen en pleine nature - Éclaireurs de la Nature Normandie"
       width="1920"
       height="1080"
-      class="w-full h-auto object-cover mb-6 rounded-lg bg-white mt-16 aspect-auto"
+      class="w-full h-auto mb-6 rounded-lg bg-white mt-16"
     />
   </section>
 
@@ -241,8 +243,9 @@
       ngSrc="/images/benevoles.webp"
       alt="Scouts EDLN Caen en pleine nature - Éclaireurs de la Nature Normandie"
       width="1920"
-      height="1080"
-      class="w-full h-auto object-cover mb-6 rounded-lg bg-white mt-16 aspect-auto"
+      height="1278"
+      priority
+      class="w-full h-auto mb-6 rounded-lg bg-white mt-16"
     />
   </section>
 </div>
